# goit-ds-hw-01

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/modules/: input_error.py  main.py
